# FuzzyControl

./: OutputWithDifferentAccuracies.md  README.md
FuzzyControl/: README.md
FuzzyControl/code/C/: .gitignore  README.md
FuzzyControl/code/C/src/: CMakeLists.txt  fc.h
FuzzyControl/code/C/src/core/: fc_core.h  fc_def.h  fc_ds.c  fc_error.h  fc_input.c  fc_input.h  fc_list.c  fc_list.h  fc_mem.h  fc_obj.h  fc_operation.c  fc_operation.h  fc_std.h  fc_type.c  fc_type.h  list.c  list.h
FuzzyControl/code/C/src/core/include/: fc_core.h  fc_ds.h  fc_error.h
FuzzyControl/code/C/src/exter/: fc_exter.h  fuzzy_opera.c  fuzzy_opera.h  list.c  list.h
FuzzyControl/code/C/test/CoreFunction/: CMakeLists.txt  main.c
code/C/: README.md
code/C/src/: CMakeLists.txt  fc.h
draw.io/模糊控制相关概念/: 模糊控制相关概念.drawio
draw.io/算法核心框架/: ~$算法核心框架.drawio.bkp  算法核心框架.drawio
example/0.1-ListAndFuzzyForESP-01SBaseOnArduino/: 0.1-ListAndFuzzyForESP-01SBaseOnArduino.ino  fuzzy_opera.c  fuzzy_opera.h  list.h
example/0.2-Module_fc_input_ForESP-01SBaseOnArduino/: 0.2-Module_fc_input_ForESP-01SBaseOnArduino.ino
example/1.0-FuzzyControlTest01/: 1.0-FuzzyControlTest01.ino  fc.h  fc_config.h  fc_controler.c  fc_controler.h  fc_controller.h  fc_core.h  fc_input.c  fc_input.h  fc_output.h  fc_rules.c  fc_rules.h  fuzzy_opera.h  list.c  list.h
forREADME/: ~$模糊控制相关概念.drawio.bkp  分数隶属函数曲线.py
src/: CMakeLists.txt  fc.h
src/config/: fc_config.h
src/core/: fc_controler.c  fc_controler.h  fc_controller.c  fc_controller.h  fc_core.c  fc_core.h  fc_inference.c  fc_inference.h  fc_input.c  fc_input.h  fc_interface.c  fc_interface.h  fc_obj.h  fc_output.c  fc_output.h  fc_rules.c  fc_rules.h  fc_std.h
src/exter/: fuzzy_opera.c  fuzzy_opera.h  list.c  list.h
src/periph/: fc_fileSave.c  fc_fileSave.h  fc_periph.h
test/Core/: Core.sln
test/Core-FuzzyOpera/Core-FuzzyOpera/: Core-FuzzyOpera.vcxproj  Core-FuzzyOpera.vcxproj.filters  main.c
test/Core-fc_inference/: Core-fc_inference.sln
test/Core-fc_inference/Core-fc_inference/: Core-fc_inference.vcxproj  Core-fc_inference.vcxproj.filters  main.c
test/Core-fc_input/: Core-fc_input.sln
test/Core-fc_input/Core-fc_input/: Core-fc_input.vcxproj  Core-fc_input.vcxproj.filters  main.c
test/Core-fc_output/: Core-fc_output.sln
test/Core-fc_output/Core-fc_output/: Core-fc_output.vcxproj  Core-fc_output.vcxproj.filters  main.c
test/Core-fc_rules/: Core-fc_rules.sln
test/Core-fc_rules/Core-fc_rules/: Core-fc_rules.vcxproj  Core-fc_rules.vcxproj.filters  main.c
test/Core/Core/: Core.vcxproj  (+2 more)
test/fc_controler/: .gitignore  fc_controler.sln
test/fc_controller/: .gitignore  fc_controller.sln
test/fc_input/: .gitignore  fc_input.sln
test/fc_output/: .gitignore  fc_output.sln
test/fc_rules/: .gitignore  fc_rules.sln
test/fuzzy_opera/: .gitignore  fuzzy_opera.sln
test/list/: list.sln
(+281 files in other folders)
